fixed spacing

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,11 +1,18 @@
+h1 {
+    margin: 5px;
+}
+
 .details-center {
     margin-left: 15px;
     margin-right: 15px;
 }
 
 .free-button {
-    margin-bottom: 15px;
-    margin-top: 15px;
+    margin: 15px;
+}
+
+.margin-3 {
+    margin: 3rem 4rem;
 }
 
 .background {
@@ -14,22 +21,20 @@
     overflow-y: scroll;
 }
 
-
 .text {
     color: black;
     font-size: 0.6em;
 }
 
-.text .info{
+.text .info {
     font-size: 0.8em;
 }
 
-
-.text .releaseYear{
+.text .releaseYear {
     font-size: 0.7em;
 }
 
-.text .description{
+.text .description {
     font-size: 0.7em;
 }
 
@@ -38,9 +43,8 @@
     transition: transform 500ms;
     cursor: pointer;
     object-fit: contain;
-    padding:0px !important;
+    padding: 0px !important;
     border: none !important;
-
 }
 
 .row:hover .item {
@@ -64,14 +68,18 @@ body {
     object-fit: contain;
 }
 
-.card-body{
+.card-body {
     position: absolute;
     top: 100%;
     width: 100%;
 }
 
-
-.item:hover .card-body{
-    background:   #33394d;
+.item:hover .card-body {
+    background: #33394d;
     color: white;
+}
+
+.image-details-page {
+    max-height: 60rem;
+    width: 100%;
 }
